# sentinel

./: .gitignore  License  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: default.yaml
csrc/: CMakeLists.txt
csrc/sentinel_core/bindings/: bind_batch.cpp  bind_cost_matrix.cpp  bind_ekf.cpp  bind_geodetic.cpp  bind_jpda.cpp  bind_kalman.cpp  bind_physics.cpp  module.cpp
csrc/sentinel_core/include/sentinel/: batch_ops.h  common.h  cost_matrix.h  ekf_ops.h  geodetic_ops.h  jpda_ops.h  kalman_ops.h  physics_ops.h
csrc/sentinel_core/src/: batch_ops.cpp  cost_matrix.cpp  ekf_ops.cpp  geodetic_ops.cpp  jpda_ops.cpp  kalman_ops.cpp  physics_ops.cpp
scripts/: demo_dashboard.py  demo_datalink.py  demo_engagement.py  demo_full_ew.py  demo_history.py  demo_network.py  train_threat_classifier.py
src/sentinel/: __init__.py  __main__.py
src/sentinel/classification/: __init__.py  features.py  intent_estimator.py  roe.py  threat_classifier.py  training_data.py
src/sentinel/core/: bus.py  clock.py  config.py  config_schema.py  pipeline.py  types.py
src/sentinel/datalink/: __init__.py  adapter.py  codec.py  config.py  encoding.py  gateway.py  j_series.py  stats.py  track_mapping.py  transport.py  validator.py
src/sentinel/detection/: base.py  yolo.py
src/sentinel/engagement/: __init__.py  assignment.py  config.py  feasibility.py  manager.py  weapons.py  zones.py
src/sentinel/fusion/: __init__.py  multi_sensor_fusion.py  multifreq_correlator.py  state_fusion.py  temporal_alignment.py  track_fusion.py
src/sentinel/history/: __init__.py  buffer.py  config.py  frame.py  recorder.py  replay.py  storage.py
src/sentinel/network/: __init__.py  bridge.py  composite_fusion.py  discovery.py  messages.py  node.py  pubsub.py  transport.py
src/sentinel/sensors/: base.py  camera.py  environment.py  ew.py  frame.py  iff.py  multifreq_radar_sim.py  physics.py  quantum_radar_sim.py  radar_sim.py  thermal_sim.py
src/sentinel/tracking/: _accel.py  association.py  base_track.py  batch_ops.py  cost_functions.py  filters.py  imm.py  jpda.py  radar_association.py  radar_track.py  radar_track_manager.py  thermal_association.py  thermal_track.py  thermal_track_manager.py  track.py  track_manager.py  track_quality.py
src/sentinel/ui/hud/: elements.py  renderer.py  styles.py
src/sentinel/ui/web/: __init__.py  bridge.py  mjpeg.py  server.py  state_buffer.py
src/sentinel/ui/web/static/: index.html
src/sentinel/ui/web/static/css/: dashboard.css
src/sentinel/ui/web/static/js/: hud_feed.js  main.js  metrics_panel.js  replay_controls.js  sensor_panel.js  tactical_map.js  threat_panel.js  track_table.js
src/sentinel/utils/: coords.py  geo_context.py  geodetic.py  logging.py
tests/: conftest.py
tests/benchmarks/: test_batch_benchmarks.py  test_kf_benchmarks.py
tests/integration/: conftest.py  test_datalink_e2e.py  test_engagement_e2e.py  test_fusion_e2e.py  test_geodetic_e2e.py  test_history_e2e.py  test_ml_classification.py  test_network_e2e.py  test_phase9_e2e.py  test_pipeline_e2e.py  test_radar_e2e.py  test_web_e2e.py
tests/scenarios/: conftest.py  test_deterministic_time.py  test_engagement_scenarios.py  test_ew_scenarios.py  test_history_scenarios.py  test_hypersonic_raid.py  test_iff_scenarios.py  test_mixed_threat.py  test_multi_target_swarm.py  test_stealth_ingress.py  test_terrain_weather.py
tests/unit/: test_3d_filters.py  test_assignment.py  test_association.py  test_association_improvements.py  test_base_track.py  test_batch_ops.py  test_bridge.py  test_bugfixes.py  test_bus.py  test_ca_filter.py  test_camera.py  test_clock.py  test_composite_fusion.py  test_config.py  test_config_schema.py  test_config_wiring.py  test_coords.py  test_cost_functions.py  test_datalink_adapter.py  test_datalink_codec.py  test_datalink_config.py  test_datalink_encoding.py  test_datalink_gateway.py  test_datalink_j_series.py  test_datalink_track_mapping.py  test_datalink_transport.py  test_datalink_validator.py  test_discovery.py  test_ekf.py  test_engagement_config.py  test_engagement_manager.py  test_environment.py  test_environment_integration.py  test_ew.py  test_ew_integration.py  test_ew_timing_fix.py  test_feasibility.py  test_feature_extraction.py  test_geo_context.py  test_geodetic.py  (+51 more)
