[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "sentinel"
version = "0.1.0"
description = "SENTINEL - Sensor-Enhanced Networked Tracking, Intelligence, and Engagement Library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SENTINEL Project"},
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    "structlog>=23.0",
    "scipy>=1.11",
    "pydantic>=2.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "websockets>=11.0",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "pytest-asyncio",
    "httpx",
    "ruff>=0.1",
    "pybind11>=2.11",
]
all = ["sentinel[web,dev]"]

[project.scripts]
sentinel = "sentinel.__main__:main"

[tool.scikit-build]
cmake.source-dir = "csrc"
wheel.packages = ["src/sentinel"]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
BUILD_TESTS = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
